--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gaegu:wght@700&display=swap"
       rel="stylesheet"
     />
   </head>
