--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PGL8ZEQGZG"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-PGL8ZEQGZG');
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="png" href="src/assets/memelogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
