fix: search modal

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
       gtag('config', 'G-PGL8ZEQGZG');
     </script>
+    <meta
+      name="google-site-verification"
+      content="_XtQVg9hnazrPDJ6kS-Fw9U2Fn35K2C4pL9Z_fa3ud0"
+    />
     <meta charset="UTF-8" />
     <link rel="icon" type="png" href="src/assets/memelogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
